--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
-<title>Google Classroom 6x: Play Unblocked Games Free at School</title>
-<meta content="Play unblocked Google Classroom 6x games for free at school. Enjoy a variety of fun and educational games during free periods without restrictions." name="description"/><meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-<meta name="keywords" content="classroom 6x, 6x classroom, google classroom 6x, unblocked games 6x classroom, classroom 6x slope, bitlife classroom 6x, bitlife 6x, classroom games 6x, classroom.6x, 1v1.lol unblocked classroom 6x, 1v1.lol unblocked, 6x classroom games, classroom 6x, 1v1lol classroom 6x, classroom 6x, retro bowl classroom 6x, 6 classroom, slope classroom 6x, classroom 6x slope, 1v1 classroom 6x, classroom 6x, classroom 6x bitlife, bitlife classroom 6x, classroom unblocked games 6x, 6 classroom, unblocked game on classroom 6x ">
+<title>Google Classroom 6x: Play Games Free at School</title>
+<meta content="Play  Google Classroom 6x games for free at school. Enjoy a variety of fun and educational games during free periods without restrictions." name="description"/><meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+<meta name="keywords" content="classroom 6x, 6x classroom, google classroom 6x,  games 6x classroom, classroom 6x slope, bitlife classroom 6x, bitlife 6x, classroom games 6x, classroom.6x, 1v1.lol  classroom 6x, 1v1.lol , 6x classroom games, classroom 6x, 1v1lol classroom 6x, classroom 6x, retro bowl classroom 6x, 6 classroom, slope classroom 6x, classroom 6x slope, 1v1 classroom 6x, classroom 6x, classroom 6x bitlife, bitlife classroom 6x, classroom  games 6x, 6 classroom,  game on classroom 6x ">
 <meta name="author" content="Classroom 6x Team">
 <link rel="canonical" href="https://6x-classrooms.github.io/" />
 <meta name="publisher" content="Classroom 6x Team">
@@ -102,8 +102,8 @@
 </div>
 </nav>
 <div class="container">
-  <h1 style="font-weight: bolder; color:white; text-align: center;">Classroom 6x Unblocked Games</h1>
-  <p style="color:white; text-align: center;   margin-top: 40px;">Unblocked Games 6x is a gaming platform that provides endless entertainment in restricted areas like schools and offices.<br> We have all Unblocked Premium Games to entertain you. Our motive is to lower your stress whether<br> it's due to school boring lectures or office toxic environment.</p> 
+  <h1 style="font-weight: bolder; color:white; text-align: center;">Classroom 6x  Games</h1>
+  <p style="color:white; text-align: center;   margin-top: 40px;"> Games 6x is a gaming platform that provides endless entertainment in restricted areas like schools and offices.<br> We have all  Premium Games to entertain you. Our motive is to lower your stress whether<br> it's due to school boring lectures or office toxic environment.</p> 
   <br>
   <!-- More FnaF games section -->
 <!-- New games section -->
@@ -306,10 +306,10 @@
     </div>
 
     <div class="col-lg-2 col-md-4 col-6 grid-3">
-      <a href="./game/ovo-unblocked.html" title="OvO Unblocked">
+      <a href="./game/ovo-.html" title="OvO ">
       <div class="game-item">
       <div class="list-game">
-      <div class="list-thumbnail"><img alt="OvO Unblocked" class="lazyload" src="img/5.webp"/></div>
+      <div class="list-thumbnail"><img alt="OvO " class="lazyload" src="img/5.webp"/></div>
       </div>
       </div>
       </a>
@@ -791,10 +791,10 @@
 </div>
 
 <body>
-    <h2>How to Play on Unblocked Games</h2>
-    <p>Playing <strong>Unblocked Games Premium</strong> is very simple. Follow these easy steps to start your gaming adventure:</p>
+    <h2>How to Play on  Games</h2>
+    <p>Playing <strong> Games Premium</strong> is very simple. Follow these easy steps to start your gaming adventure:</p>
     <ol>
-        <li>Open your browser and go to the Unblocked Games 6x website.</li>
+        <li>Open your browser and go to the  Games 6x website.</li>
         <li>You will get a list of different premium games.</li>
         <li>Choose any game according to your taste or mood.</li>
         <li>Start playing!</li>
